wordpress/themes/nbeat.3/src/sass/layout/_footer.scss
 #footer[role="pagefooter"] {
    background-color: $no-nbeat-footer-bg;
    color: $no-nbeat-footer-color;
    padding: $footer-padding 0;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 0;
    height: $no-nbeat-footer-height;

    .container {
        @include nb_flex();
        @include nb_flex-align-items(center);
        height: 100%;

        > div {
            width: 100%;
            @include nb_flex();
            @include nb_flex_justifycontent();
            @include nb_flex_wrap();
            @include nb_flex-align-items(center);
            position: relative;

            > * {
                // border: 1px solid red;
            }
        
        }
    }
    
    .no-nbeat-logo {
        width: auto;
        margin-bottom: 1rem;

        @include media-breakpoint-up(lg) {
            width: auto;
        }

        @include media-breakpoint-up(xl) {
            margin-bottom: 0;
        }
    }

    .info {
        width: 100%;
        @include nb_flex();
        @include nb_flex_justifycontent();
        @include scale("font-size", $font-size-base);
        @include nb_flex_wrap();
        margin-bottom: 0;
        
        @include media-breakpoint-up(md) {
            margin-bottom: 1rem;
            @include nb_flex_wrap(nowrap);
        }
        
        @include media-breakpoint-up(lg) {
            width: auto;
            @include nb_flex_justifycontent(flex-end);
        }

        @include media-breakpoint-up(xl) {
            margin-bottom: 0;
        }

        .col {
            a {
                @include nb_flex();
                @include nb_flex-align-items();

                &:hover {
                    text-decoration: none;
                }
            }
            // border: 1px solid orange;

            &:first-of-type {
                margin-bottom: 0.5rem;
            }

            &:nth-child(-n+2) {
                width: 100%;
            }

            @include media-breakpoint-up(md) {
                margin-left: 2rem;

                &:first-of-type {
                    margin-bottom: 0;
                }

                &:nth-child(-n+2) {
                    width: auto;
                }
            }

            &:first-of-type {
                margin-left: 0;
            }

            .footericon {
                padding-right: 0.7rem;
                line-height: 1;
                min-width: 32px;
            }
            
            h3 {
                @include scale("font-size", $font-size-h6);
                margin: 0;
                font-weight: bold;
            }
            
            p {
                margin: 0;
            }
            
            a {
                color: $no-nbeat-footer-color;
            }
        }

        .social {
            @include nb_flex();
            @include nb_flex-direction(column);
            position: absolute;
            right: 0;
            top: 0;

            a {
                margin-bottom: 0.5rem;

                &:last-of-type {
                    margin-bottom: 0;
                }
            }
            
            @include media-breakpoint-up(md) {
                position: relative;
                @include nb_flex-direction(row);

                a {
                    margin-bottom: 0;
                    margin-left: 0.5rem;
                }
            }
        }
    }
}

